Source/WebKit2/UIProcess/Downloads/DownloadProxy.cpp
@@ -189,7 +189,8 @@ void DownloadProxy::decideDestinationWithSuggestedFilenameAsync(DownloadID downl
     if (NetworkProcessProxy* networkProcess = m_processPool->networkProcess())
         networkProcess->connection()->send(Messages::NetworkProcess::ContinueDecidePendingDownloadDestination(downloadID, destination, sandboxExtensionHandle, allowOverwrite), 0);
 }
-#else
+#endif
+
 void DownloadProxy::decideDestinationWithSuggestedFilename(const String& filename, String& destination, bool& allowOverwrite, SandboxExtension::Handle& sandboxExtensionHandle)
 {
     allowOverwrite = false;
@@ -206,7 +207,6 @@ void DownloadProxy::decideDestinationWithSuggestedFilename(const String& filenam
     if (!destination.isNull())
         SandboxExtension::createHandle(destination, SandboxExtension::ReadWrite, sandboxExtensionHandle);
 }
-#endif
 
 void DownloadProxy::didCreateDestination(const String& path)
 {
